--- a/.github/workflows/techtrends-dockerhub.yml
+++ b/.github/workflows/techtrends-dockerhub.yml
@@ -20,7 +20,7 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
-          context: ../../
-          file: Dockerfile
+          context: ../../project
+          file: ../../project/Dockerfile
           push: true
           tags: abdlquadri/techtrends:latest
