--- a/project/helm/templates/deploy.yaml
+++ b/project/helm/templates/deploy.yaml
@@ -35,7 +35,7 @@ spec:
         resources:
           requests:
             cpu: {{ .Values.resources.requests.cpu }}
-            memory: {{ .Values.resources.readinessProbe.memory }}
+            memory: {{ .Values.resources.requests.memory }}
           limits:
             cpu: {{ .Values.resources.limits.cpu }}
             memory: {{ .Values.resources.limits.memory }}
