--- a/project/helm/values.yaml
+++ b/project/helm/values.yaml
@@ -7,7 +7,7 @@ service:
   type: ClusterIP
 
 image:
-  repository: techtrends 
+  repository: abdlquadri/techtrends 
   tag: latest
   pullPolicy: IfNotPresent
 
